[gd_scene load_steps=14 format=3 uid="uid://bbh32kt8md5fb"]

[ext_resource type="Texture2D" uid="uid://vrx8uwcvnqhs" path="res://addons/hexmap/icons/Search.svg" id="1_3u53n"]
[ext_resource type="Script" path="res://addons/hexmap/gui/hex_map_editor_bottom_panel.gd" id="1_qghj3"]
[ext_resource type="Texture2D" uid="uid://dew2xbw2uvpy2" path="res://addons/hexmap/icons/Paint.svg" id="2_q6cql"]
[ext_resource type="Texture2D" uid="uid://dbrg57lmmg1vq" path="res://addons/hexmap/icons/FileThumbnail.svg" id="2_ysjwf"]
[ext_resource type="Texture2D" uid="uid://b6oomxj77xtlg" path="res://addons/hexmap/icons/Eraser.svg" id="3_a0fx5"]
[ext_resource type="Texture2D" uid="uid://douar0i3bcce3" path="res://addons/hexmap/icons/FileList.svg" id="3_yatl2"]
[ext_resource type="Texture2D" uid="uid://db3esx21o6mn1" path="res://addons/hexmap/icons/ToolSelect.svg" id="4_u20k1"]
[ext_resource type="Texture2D" uid="uid://dxcds4yxeot0t" path="res://addons/hexmap/icons/ActionCopy.svg" id="5_brsxn"]
[ext_resource type="Texture2D" uid="uid://mx45khfrx1g6" path="res://addons/hexmap/icons/ToolMove.svg" id="6_n0otx"]
[ext_resource type="Texture2D" uid="uid://hlskhr8entje" path="res://addons/hexmap/icons/RotateLeft.svg" id="7_hxt1m"]
[ext_resource type="Texture2D" uid="uid://dwstkvj1mrmt3" path="res://addons/hexmap/icons/RotateRight.svg" id="8_qhtoq"]
[ext_resource type="PackedScene" uid="uid://7do5qk8fxmuy" path="res://addons/hexmap/gui/zoom_widget.tscn" id="12_64prf"]
[ext_resource type="Texture2D" uid="uid://bvo0uao7deu0q" path="res://addons/gut/icon.png" id="13_a6a2g"]

[node name="HexMapEditorBottomPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qghj3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolbarHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ToolbarHBox"]
visible = false
layout_mode = 2

[node name="PaintButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("2_q6cql")
flat = true

[node name="EraseButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_a0fx5")
flat = true

[node name="SelectButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_u20k1")
flat = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
layout_mode = 2

[node name="CopyButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("5_brsxn")
flat = true

[node name="MoveButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("6_n0otx")
flat = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
layout_mode = 2

[node name="CCWButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("7_hxt1m")
flat = true

[node name="CWButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("8_qhtoq")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ToolbarHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/ToolbarHBox/HBoxContainer2"]
layout_mode = 2

[node name="FloorLabel" type="Label" parent="VBoxContainer/ToolbarHBox/HBoxContainer2"]
layout_mode = 2
text = "Floor"

[node name="FloorSpinBox" type="SpinBox" parent="VBoxContainer/ToolbarHBox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -32768.0
max_value = 32767.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ToolbarHBox/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ToolbarHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="FilterLineEdit" type="LineEdit" parent="VBoxContainer/ToolbarHBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Filter Meshes"
clear_button_enabled = true
right_icon = ExtResource("1_3u53n")

[node name="ThumbnailButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("2_ysjwf")
flat = true

[node name="ListButton" type="Button" parent="VBoxContainer/ToolbarHBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_yatl2")
flat = true

[node name="ZoomWidget" parent="VBoxContainer/ToolbarHBox/HBoxContainer" instance=ExtResource("12_64prf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
alignment = 1

[node name="MeshItemList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 2
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(128, 128)
item_0/text = "test"
item_0/icon = ExtResource("13_a6a2g")
item_1/text = "banana"
item_1/icon = ExtResource("5_brsxn")
